# cuHECNN

./: CMakeLists.txt  README.md  hmm.py  main.cu
data/: model_weights.csv
src/: helper.cuh  hmm.cu  hmm.cuh  inferNew.cu  inferNew.cuh
